task1/crossplane/manual-deployments/consumer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  namespace: devopstest
spec:
  replicas: 1
  selector:
    matchLabels: { app: consumer }
  template:
    metadata:
      labels: { app: consumer }
    spec:
      containers:
        - name: consumer
          image: ghcr.io/justtrackio/devopstest-consumer:latest
