task1/crossplane/manual-deployments/producer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: devopstest
spec:
  replicas: 1
  selector:
    matchLabels: { app: producer }
  template:
    metadata:
      labels: { app: producer }
    spec:
      containers:
        - name: producer
          image: ghcr.io/justtrackio/devopstest-producer:latest
