task1/crossplane/manual-deployments/dynamodb-admin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb-admin
  namespace: devopstest
spec:
  replicas: 1
  selector:
    matchLabels: { app: dynamodb-admin }
  template:
    metadata:
      labels: { app: dynamodb-admin }
    spec:
      containers:
        - name: dynamodb-admin
          image: aaronshaf/dynamodb-admin:latest
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: dynamodb-admin
  namespace: devopstest
spec:
  selector:
    app: dynamodb-admin
  ports:
    - name: http
      port: 80
      targetPort: 8001
